--- a/conf/application.conf
+++ b/conf/application.conf
@@ -338,8 +338,10 @@ db {
   # By convention, the default datasource is named `default`
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
-  default.driver = org.postgresql.Driver
+//  default.driver = org.postgresql.Driver
   default.url = "jdbc:postgresql://localhost:5432/testcase_database"
+  default.driver=org.postgresql.Driver
+//  default.url="jdbc:postgresql://127.0.0.1:5432/testcase_database"
   default.username = admin
   default.password = "qwerty"
 
