--- a/conf/application.conf
+++ b/conf/application.conf
@@ -338,10 +338,9 @@ db {
   # By convention, the default datasource is named `default`
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
-//  default.driver = org.postgresql.Driver
+
   default.url = "jdbc:postgresql://localhost:5432/testcase_database"
   default.driver=org.postgresql.Driver
-//  default.url="jdbc:postgresql://127.0.0.1:5432/testcase_database"
   default.username = admin
   default.password = "qwerty"
 
@@ -349,3 +348,22 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+
+slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
+slick.dbs.default.db.driver=org.postgresql.Driver
+slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/testcase_database"
+slick.dbs.default.db.user=admin
+slick.dbs.default.db.password="qwerty"
+//slick.dbs.default.driver="slick.driver.PostgresDriver$"
+//slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+//slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
+
+slick.dbs.mydb.profile="slick.jdbc.PostgresProfile$"
+slick.dbs.mydb.db.driver=org.postgresql.Driver
+slick.dbs.mydb.db.url="jdbc:postgresql://localhost:5432/testcase_database"
+slick.dbs.mydb.db.user=admin
+slick.dbs.mydb.db.password="qwerty"
+//slick.dbs.mydb.driver="slick.driver.PostgresDriver$"
+//slick.dbs.mydb.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+//slick.dbs.mydb.db.properties.driver = "org.postgresql.Driver"
