Написана функция генерации путей/номеров

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -333,21 +333,21 @@ play.db {
 # EBean: https://playframework.com/documentation/latest/JavaEbean
 # Anorm: https://www.playframework.com/documentation/latest/ScalaAnorm
 #
-//db {
+db {
   # You can declare as many datasources as you want.
   # By convention, the default datasource is named `default`
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
 
-//  default.url = "jdbc:postgresql://localhost:5432/testcase_database"
-//  default.driver=org.postgresql.Driver
-//  default.username = admin
-//  default.password = "qwerty"
+  default.url = "jdbc:postgresql://localhost:5432/testcase_database"
+  default.driver=org.postgresql.Driver
+  default.username = admin
+  default.password = "qwerty"
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
-//}
+}
 
 
 slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
@@ -359,11 +359,11 @@ slick.dbs.default.db.password="qwerty"
 //slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
 //slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
 
-//slick.dbs.mydb.profile="slick.jdbc.PostgresProfile$"
-//slick.dbs.mydb.db.driver=org.postgresql.Driver
-//slick.dbs.mydb.db.url="jdbc:postgresql://localhost:5432/testcase_database"
-//slick.dbs.mydb.db.user=admin
-//slick.dbs.mydb.db.password="qwerty"
+slick.dbs.mydb.profile="slick.jdbc.PostgresProfile$"
+slick.dbs.mydb.db.driver=org.postgresql.Driver
+slick.dbs.mydb.db.url="jdbc:postgresql://localhost:5432/testcase_database"
+slick.dbs.mydb.db.user=admin
+slick.dbs.mydb.db.password="qwerty"
 //slick.dbs.mydb.driver="slick.driver.PostgresDriver$"
 //slick.dbs.mydb.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
 //slick.dbs.mydb.db.properties.driver = "org.postgresql.Driver"
