доделан апдейт записей

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -367,3 +367,5 @@ slick.dbs.mydb.db.password="qwerty"
 //slick.dbs.mydb.driver="slick.driver.PostgresDriver$"
 //slick.dbs.mydb.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
 //slick.dbs.mydb.db.properties.driver = "org.postgresql.Driver"
+
+logger.scala.slick=DEBUG
